--- a/index.html/index.html
+++ b/index.html/index.html
@@ -481,9 +481,9 @@ input[type="date"] {
 }
 </style>
 </head>
-<body>
-
-<!-- Menú Principal -->
+<body
+  <!-- Página de Inicio -->
+<div id="paginaInicio">
 <section id="menuPrincipal" class="seccion" style="text-align: center;">
     <h2>ACCESO</h2>
     <div style="display: flex; flex-direction: column; align-items: center; gap: 15px; max-width: 300px; margin: 0 auto;">
