--- a/index.html/index.html
+++ b/index.html/index.html
@@ -329,7 +329,7 @@ strong {
 
 #menuLateral button:hover {
   background-color: var(--verde-claro); /* #DCE6D4 */
-  color: var(--verde-oscuro); /* #16471C */
+  color: var(--verde-claro); /* #16471C */
   transform: translateX(5px);
 }
 
