--- a/index.html/index.html
+++ b/index.html/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Capacita SM - Prevención de Incendios</title>
+<title>Capacita SM</title>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 <style>
@@ -289,7 +289,7 @@ strong {
 
 #menuLateral {
   width: 280px;
-  background-color: var(--verde-oscuro); /* #16471C */
+  background-color: var(--verde-claro); /* #DCE6D4 */
   padding: 25px 15px;
   box-shadow: 3px 0 10px rgba(0,0,0,0.15);
   display: flex;
