--- a/index.html/index.html
+++ b/index.html/index.html
@@ -314,7 +314,7 @@ strong {
 
 #menuLateral button {
   background-color: var(--verde-primario); /* #98C15E */
-  color: var(--blanco); /* #FFFFFF */
+  color:transparent;
   border: none;
   padding: 12px 15px;
   margin: 8px 0;
