--- a/index.html/index.html
+++ b/index.html/index.html
@@ -302,7 +302,7 @@ strong {
   margin-bottom: 5px;
   text-align: center;
   padding-bottom: 15px;
-  border-bottom: 2px solid var(--verde-primario); /* #98C15E */
+  border-bottom: 2px solid var(--verde-claro); /* #98C15E */
 }
 
 #menuLateral p {
@@ -314,7 +314,7 @@ strong {
 
 #menuLateral button {
   background-color: var(--verde-primario); /* #98C15E */
-  color:transparent;
+  color:var(--blanco);
   border: none;
   padding: 12px 15px;
   margin: 8px 0;
